--- a/mo-instagram/Base.lproj/Main.storyboard
+++ b/mo-instagram/Base.lproj/Main.storyboard
@@ -99,6 +99,11 @@
                                 <action selector="logout:" destination="Qac-Vo-ql6" id="hoA-vT-wSn"/>
                             </connections>
                         </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" image="insta_camera_btn" id="c19-ft-1z8">
+                            <connections>
+                                <action selector="addPicture:" destination="Qac-Vo-ql6" id="Xh5-Tb-aQl"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <connections>
                         <segue destination="BYZ-38-t0r" kind="presentation" identifier="logoutSegue" id="z6V-yC-YKJ"/>
@@ -129,5 +134,6 @@
     </scenes>
     <resources>
         <image name="Icon-60" width="60" height="60"/>
+        <image name="insta_camera_btn" width="25" height="25"/>
     </resources>
 </document>
