--- a/mo-instagram/Base.lproj/Main.storyboard
+++ b/mo-instagram/Base.lproj/Main.storyboard
@@ -154,6 +154,9 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="textView" destination="cGb-0Z-64t" id="IwY-nf-aVe"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oRb-Aw-vEC" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <tapGestureRecognizer id="zl4-Gb-oOb">
